--- a/fusion-intro/fusion.ipynb
+++ b/fusion-intro/fusion.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "*Fusion* is an Object-Oriented API specifically designed for Conic Optimization with **MOSEK**. In version 9 of **MOSEK** *Fusion* is available for Python, C#, Java and C++.\n",
     "\n",
-    "*Fusion* makes it easy assemble optimization models from conic blocks without going through the nitty-gritty of converting the optimization problem into matrix form - *Fusion* takes care of that part. It makes it easy to add and remove constraints and experiment with the model, making prorotyping of complex models very quick. It provides  linear expressions, linear algebra operations and cones.\n",
+    "*Fusion* makes it easy to assemble optimization models from conic blocks without going through the nitty-gritty of converting the optimization problem into matrix form - *Fusion* takes care of that part. It makes it easy to add and remove constraints and experiment with the model, making prototyping of complex models very quick. It provides  linear expressions, linear algebra operations and cones.\n",
     "\n",
     "This is a quick demonstration of the main capabilities of *Fusion*. More details may be found in the documentation for the respective APIs. In particular section 6 of each Fusion API manual contains a lot more modeling techniques.\n"
    ]
@@ -50,7 +50,7 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "where $K^i$ are convex cones. The possible cones $\\mathcal{K}^i$ are  \n",
+    "where $K^i$ are convex cones. The possible cones $K^i$ are  \n",
     "\n",
     "* $\\{0\\}$ - the zero cone. This expresses simply a linear equality constraint $Ax+b=0$.\n",
     "* $\\mathbb{R}_+$ - positive orthant. This expresses simply a linear inequality constraint $Ax+b\\geq 0$.\n",
@@ -103,7 +103,7 @@
    "source": [
     "# Conic constraints\n",
     "\n",
-    "We can now solve the unconstrained linear regression problem, that is minimize $\\|Ax+b\\|_2$. This will require a new variable $t$ such that the compound vector $(t,Ax+b)$ belongs to the quadratic cone (i.e. $t\\geq \\|Ax+b\\|_2$). The compound vector is created as a stack from exixsing expressions of compatible shapes. "
+    "We can now solve the unconstrained linear regression problem, that is minimize $\\|Ax+b\\|_2$. This will require a new variable $t$ such that the compound vector $(t,Ax+b)$ belongs to the quadratic cone (i.e. $t\\geq \\|Ax+b\\|_2$). The compound vector is created as a stack from existing expressions of compatible shapes. "
    ]
   },
   {
