--- a/unitcommitment/ucp.ipynb
+++ b/unitcommitment/ucp.ipynb
@@ -403,7 +403,7 @@
    ],
    "source": [
     "ucp.M.setLogHandler(sys.stdout)\n",
-    "ucp.M.setSolverParam(\"mioTolRelGap\", 0.006) # 0.6%\n",
+    "ucp.M.setSolverParam(\"mioTolRelGap\", 0.03) # 3%\n",
     "#ucp.M.setSolverParam(\"mioMaxTime\", 30.0)   # 30 sec.\n",
     "ucp.M.solve()"
    ]
@@ -530,6 +530,7 @@
    "outputs": [],
    "source": [
     "# Random switch-off of some generators\n",
+    "np.random.seed(0)\n",
     "def consSOff(ucp, num):\n",
     "    N, T, p, u, v = ucp.N, ucp.T, ucp.p, ucp.u, ucp.v   \n",
     "    ucp.M.constraint(u.pick(list(np.random.randint(0,N,size=num)), list(np.random.randint(5,T,size=num))), \n",
@@ -617,7 +618,7 @@
    ],
    "source": [
     "consSOff(ucp, 10)\n",
-    "ucp.M.setSolverParam(\"mioTolRelGap\", 0.007) # 0.7%\n",
+    "ucp.M.setSolverParam(\"mioTolRelGap\", 0.02) # 2%\n",
     "ucp.M.solve()\n",
     "pVal, uVal = results(ucp)\n",
     "displayProduction(ucp, pVal, uVal, pmax)"
