Approximation notebook and small fixes

--- a/facility-location/small_disks.ipynb
+++ b/facility-location/small_disks.ipynb
@@ -192,6 +192,7 @@
     "    M, R, X, S = basicModel(1, P, 0.0)\n",
     "    M.constraint(S, Domain.equalsTo(1.0))\n",
     "    M.objective(ObjectiveSense.Minimize, R.index(0))\n",
+    "    M.writeTask('p1.task.gz')\n",    
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
@@ -240,6 +241,7 @@
     "    M, R, X, S = basicModel(1, P, bigM(P))\n",
     "    M.constraint(R, Domain.lessThan(rMax))\n",
     "    M.objective(ObjectiveSense.Maximize, Expr.sum(S))\n",
+    "    M.writeTask('p2.task.gz')\n",        
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
@@ -292,6 +294,7 @@
     "    M, R, X, S = basicModel(k, P, bigM(P))\n",
     "    M.constraint(Expr.sum(S,1), Domain.greaterThan(1.0))       #sum inside each row, i.e. along dimension 1\n",
     "    M.objective(ObjectiveSense.Minimize, Expr.sum(R))\n",
+    "    M.writeTask('p3.task.gz')\n",        
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
@@ -342,6 +345,7 @@
     "    M.constraint(Expr.vstack(t, R), Domain.inQCone())        #t>=sqrt(sum r_i^2)\n",
     "    M.constraint(Expr.sum(S,1), Domain.greaterThan(1.0))\n",
     "    M.objective(ObjectiveSense.Minimize, t)\n",
+    "    M.writeTask('p4.task.gz')\n",        
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
@@ -394,6 +398,8 @@
     "    t = M.variable(\"t\", len(P), Domain.binary())\n",
     "    M.constraint(Expr.sub(t, Expr.sum(S,1)), Domain.lessThan(0.0))     #contains one inequality for each column\n",
     "    M.objective(ObjectiveSense.Maximize, Expr.sum(t))\n",
+    "    M.setSolverParam('mioConicOuterApproximation', 'on')\n",
+    "    M.writeTask('p5.task.gz')\n",    
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
