Adapting to change in pyomo

--- a/wasserstein/wasserstein-bary.ipynb
+++ b/wasserstein/wasserstein-bary.ipynb
@@ -425,7 +425,7 @@
     "    def __init__(self):\n",
     "        self.time = 0.0\n",
     "        self.result = None\n",
-    "        self._solver = 'mosek_direct'\n",
+    "        self._solver = 'mosek'\n",
     "        self.M = pyo.ConcreteModel()\n",
     "    \n",
     "    \n",
