Add online example

--- a/online/trymosek.ipynb
+++ b/online/trymosek.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "mosek-colab-test.ipynb",
+      "name": "trymosek.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -19,7 +19,7 @@
         "id": "Ueow-AI7gR0L"
       },
       "source": [
-        "# Using MOSEK in Google Colab\n",
+        "# MOSEK in Python online demo\n",
         "\n",
         "You can run this notebook in Google Colab (or any other environment that provides ``!pip install``) as is. There is no need to install a license or anything else.\n",
         "\n",
@@ -51,7 +51,6 @@
         "from mosek.fusion import *\n",
         "import sys\n",
         "import numpy as np\n",
-        "np.random.seed(71749373)\n",
         "\n",
         "# Set up a very simple linear regression problem for demonstration\n",
         "def mosek_least_squares(m, n, A, b, log):\n",
@@ -76,7 +75,7 @@
         "  if M.getProblemStatus() == ProblemStatus.PrimalAndDualFeasible:\n",
         "    return x.level()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +95,7 @@
         "\n",
         "x = mosek_least_squares(m, n, A, b, False)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +132,7 @@
         "plt.scatter(X, Y)\n",
         "plt.plot(d, a[0] * d + a[1])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
