Fixed issue with matplotlib on Google Colab

--- a/max-volume-cuboid/maxVolumeCuboid.ipynb
+++ b/max-volume-cuboid/maxVolumeCuboid.ipynb
@@ -1319,7 +1319,23 @@
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from scipy.spatial import ConvexHull\n",
-    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
+    "\n",
+    "def configure_plotly_browser_state():\n",
+    "  import IPython\n",
+    "  display(IPython.core.display.HTML('''\n",
+    "        <script src=\"/static/components/requirejs/require.js\"></script>\n",
+    "        <script>\n",
+    "          requirejs.config({\n",
+    "            paths: {\n",
+    "              base: '/static/base',\n",
+    "              plotly: 'https://cdn.plot.ly/plotly-1.5.1.min.js?noext',\n",
+    "            },\n",
+    "          });\n",
+    "        </script>\n",
+    "        '''))\n",
+    "  \n",
+    "configure_plotly_browser_state()\n",
     "\n",
     "def inscribed_cuboid_plot(icosahedron, cuboid):\n",
     "    fig = plt.figure(figsize=(5,5))\n",
