Update Latex in notebook

--- a/pwl-convex-approximation/pwl-convex-approximation.ipynb
+++ b/pwl-convex-approximation/pwl-convex-approximation.ipynb
@@ -17,9 +17,12 @@
     "\n",
     "We are given a set of points $X_1,\\ldots,X_n\\in \\mathbb{R}^d$ and $Y_1,\\ldots,Y_n\\in\\mathbb{R}$, which we presume were generated as $Y_i = f(X_i) + \\varepsilon_i$ where $f$ is a convex function and $\\varepsilon_i$ is noise. Our least squares problem looks as follows \n",
     "\n",
-    "$\\min  \\limits _{t_1, ..., t_n \\in \\mathbb{R} \\newline \\mathbf{s}_1, ..., \\mathbf{s}_n \\in \\mathbb{R}^d } \\sum \\limits _{i} ^{N} (t_i - Y_i)^2 $\n",
-    "\n",
-    "$\\text{subject to}\\;\\;\\; t_i \\geq t_j + s_j^T (X_i - X_j)\\qquad \\text{for all} 1\\leq i,j\\leq n.$\n",
+    "$$\\begin{array}{rll}\n",
+    "\\text{minimize} & \\sum_{i=1}^n (t_i - Y_i)^2 & \\\\\n",
+    "\\text{subject to} & t_i \\geq t_j + s_j^T (X_i - X_j) &\\text{for all}\\ 1\\leq i,j\\leq n, \\\\\n",
+    "& t_1, ..., t_n \\in \\mathbb{R}, & \\\\\n",
+    "& s_1, ..., s_n \\in \\mathbb{R}^d. &\n",
+    "\\end{array}$$\n",
     "\n",
     "Then the piecewise linear function approximating the data will be defined as the maximum of $n$ linear functions $\\mathbb{R}^d\\to \\mathbb{R}$ given by\n",
     "\n",
