--- a/pwl-convex-approximation/pwl-convex-approximation.ipynb
+++ b/pwl-convex-approximation/pwl-convex-approximation.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Piece-wise linear approximation of a convex function\n",
     "\n",
-    "It is clear that each convex function can be approximated to some extent by a convex piece-wise linear function. In this notebook we show how to model this as a least squares problem. The model is heavily inspired by the paper \"**An augmented Lagrangian method with constraint generation for shape-constrained convex regression problems**\" by Lin, Sun and Toh (available at <a href=\"https://arxiv.org/abs/2012.04862\">Arxiv</a> or <a href=\"https://link.springer.com/article/10.1007/s12532-021-00210-0\">Springer Link</a>).\n",
+    "It is clear that each convex function can be approximated to some extent by a convex piece-wise linear function. In this notebook we show how to model this as a least squares problem. This model was introduced and studied by [Kuosmanen](https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1368-423X.2008.00239.x) and [Seijo, Sen](https://projecteuclid.org/journals/annals-of-statistics/volume-39/issue-3/Nonparametric-least-squares-estimation-of-a-multivariate-convex-regression-function/10.1214/10-AOS852.full), among others.\n",
     "\n",
     "We are given a set of points $X_1,\\ldots,X_n\\in \\mathbb{R}^d$ and $Y_1,\\ldots,Y_n\\in\\mathbb{R}$, which we presume were generated as $Y_i = f(X_i) + \\varepsilon_i$ where $f$ is a convex function and $\\varepsilon_i$ is noise. Our least squares problem looks as follows \n",
     "\n",
@@ -24,11 +24,17 @@
     "& s_1, ..., s_n \\in \\mathbb{R}^d. &\n",
     "\\end{array}$$\n",
     "\n",
-    "Then the piecewise linear function approximating the data will be defined as the maximum of $n$ linear functions $\\mathbb{R}^d\\to \\mathbb{R}$ given by\n",
+    "Then the piecewise linear function approximating the data will be defined as the maximum $\\Theta(x)=\\text{max}\\{\\Theta_i(x),\\ i=1,\\ldots,n\\}$ of $n$ linear functions $\\Theta_i:\\mathbb{R}^d\\to \\mathbb{R}$ given by\n",
     "\n",
-    "$$x \\to t_i + s_i^T(x-X_i)$$\n",
+    "$$\\Theta_i(x) = t_i + s_i^T(x-X_i)$$\n",
     "\n",
     "for $i=1,\\ldots,n$.\n",
+    "\n",
+    "Note that $\\Theta_i(X_i)=t_i$ and $\\nabla \\Theta_i(X_i)=s_i$. Therefore the main constraint appearing in the model represents precisely the convexity requirement:\n",
+    "\n",
+    "$$\\Theta(X_i) - \\Theta(X_j) \\geq \\langle\\nabla \\Theta(X_j),X_i-X_j\\rangle$$\n",
+    "\n",
+    "for the function $\\Theta$.\n",
     "\n",
     "### Preparing synthetic data\n",
     "\n",
