Update Latex in notebook

--- a/pwl-convex-approximation/pwl-convex-approximation.ipynb
+++ b/pwl-convex-approximation/pwl-convex-approximation.ipynb
@@ -24,15 +24,15 @@
     "& s_1, ..., s_n \\in \\mathbb{R}^d. &\n",
     "\\end{array}$$\n",
     "\n",
-    "Then the piecewise linear function approximating the data will be defined as the maximum $\\Theta(x)=\\text{max}\\{\\Theta_i(x),\\ i=1,\\ldots,n\\}$ of $n$ linear functions $\\Theta_i:\\mathbb{R}^d\\to \\mathbb{R}$ given by\n",
+    "Then the piecewise linear function approximating the data will be defined as the maximum $\\hat{\\Phi}(x)=\\text{max}\\{\\Phi_i(x),\\ i=1,\\ldots,n\\}$ of $n$ linear functions $\\Phi_i:\\mathbb{R}^d\\to \\mathbb{R}$ given by\n",
     "\n",
-    "$$\\Theta_i(x) = t_i + s_i^T(x-X_i)$$\n",
+    "$$\\Phi_i(x) = t_i + s_i^T(x-X_i)$$\n",
     "\n",
     "for $i=1,\\ldots,n$.\n",
     "\n",
-    "Note that $\\Theta_i(X_i)=t_i$ and $\\nabla \\Theta_i(X_i)=s_i$. Therefore the main constraint appearing in the model represents precisely the convexity requirement:\n",
+    "Note that $\\Phi_i(X_i)=t_i$ and $\\nabla \\Phi_i(X_i)=s_i$. Therefore the main constraint appearing in the model corresponds precisely the convexity requirement:\n",
     "\n",
-    "$$\\Theta(X_i) - \\Theta(X_j) \\geq \\langle\\nabla \\Theta(X_j),X_i-X_j\\rangle$$\n",
+    "$$\\hat{\\Phi}(X_i) - \\hat{\\Phi}(X_j) \\geq \\langle\\nabla \\hat{\\Phi}(X_j),X_i-X_j\\rangle$$\n",
     "\n",
     "for the function $\\Theta$.\n",
     "\n",
@@ -303,7 +303,7 @@
     "\n",
     "Let us evaluate our fit, this can be done as follows\n",
     "\n",
-    "$\\hat \\phi (\\mathbf{x}) = \\max \\limits _{1 \\leq j \\leq n} \\{ \\hat{t}_j + \\hat{s}_j^T (\\mathbf{x} - X_j) \\}$\n",
+    "$\\hat \\Phi (\\mathbf{x}) = \\max \\limits _{1 \\leq j \\leq n} \\{ \\hat{t}_j + \\hat{s}_j^T (\\mathbf{x} - X_j) \\}$\n",
     "    \n",
     "We can now see obvious drawback of such method; we need to keep all points. Please note that code below is not vectorized for the educational purposes but should be if aiming for efficiency."
    ]
