Fix imprecise mathematical formulation

--- a/option-pricing/utility-option-pricing.ipynb
+++ b/option-pricing/utility-option-pricing.ipynb
@@ -242,14 +242,14 @@
    "source": [
     "The objective function is:\n",
     "\n",
-    "$$\\text{maximize   }E[U(W_T)] = \\sum_{I_T\\in F_T}P(I_T) \\bigg(\\frac{aW(I_T)}{1-\\gamma} + b\\bigg)^\\gamma$$\n",
+    "$$\\text{maximize   }E[U(W_T)] = \\sum_{I_T\\in F_T}P(I_T) \\bigg(\\frac{1-\\gamma}{\\gamma}\\bigg)  \\bigg(\\frac{aW(I_T)}{1-\\gamma} + b\\bigg)^\\gamma$$\n",
     "\n",
     "where $P(I_T)$ is the probability of a given path. We can re-write this as:\n",
     "\n",
     "\n",
     "$$\\text{maximize   } \\sum_{I_T\\in F_T}P(I_T) \\bigg(\\frac{1-\\gamma}{\\gamma}\\bigg) h(I_T)$$\n",
     "\n",
-    "$$\\text{subject to :   } h(I_T)\\leq \\bigg(\\frac{1-\\gamma}{\\gamma}\\bigg) \\bigg(\\frac{aW(I_T)}{1-\\gamma} + b\\bigg)^\\gamma$$\n",
+    "$$\\text{subject to :   } h(I_T)\\leq \\bigg(\\frac{aW(I_T)}{1-\\gamma} + b\\bigg)^\\gamma$$\n",
     "\n",
     "\n",
     "Now, the constraint can be expressed as a Power cone. However, there are a few possible cases:\n",
